# axum_workspace

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
axum_postgre_docker/: Cargo.toml  Dockerfile  docker-compose.yml
axum_postgre_docker/migrations/: 0001_table_a_init.sql
axum_postgre_docker/src/: main.rs
axum_postgre_docker/src/routes/: create_one_row.rs  data_sharing.rs  mod.rs  read_one_row.rs  return_json.rs  run_database.rs
axum_postgres_docker/: .env  Cargo.toml  Dockerfile  docker-compose.yml
axum_postgres_docker/migrations/: 0002_expense_categories.sql  0003_expenses_table.sql
axum_postgres_docker/src/: config.rs  main.rs  run_database.rs
axum_postgres_docker/src/http/: add_new_expense.rs  create_one_row.rs  mod.rs  root_path.rs  root_path_get.rs
docs/: axum-leptos.md  from-scratch.md  template.md
yew_frontend_docker/: Cargo.toml  Dockerfile
